--- a/solve/solve.css
+++ b/solve/solve.css
@@ -56,9 +56,7 @@ svg text {
 }
 
 #input-form {
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    padding:0 20px 20px 20px;
 }
 
 path {
