--- a/solve/solve.css
+++ b/solve/solve.css
@@ -56,26 +56,24 @@ svg text {
 }
 
 #input-form {
-    padding:0 20px 20px 20px;
+    padding: 0 20px 20px 20px;
 }
+
+form label {
+    width: 60px;
+    display: inline-block;
+}
+
+input {
+    margin-bottom: 5px;
+}
+
 
 path {
     stroke: black;
     fill: white;
     stroke-width: inherit;
     stroke-linejoin: miter;
-}
-
-label {
-    grid-column: 1;
-}
-
-input {
-    grid-column: 2;
-}
-
-button {
-    grid-column: 1
 }
 
 #output {
@@ -88,23 +86,24 @@ button {
 
 @media only screen and (max-width: 500px) {
     #grid {
-        grid-template-columns: min-content min-content;
+        grid-template-columns: 100%;
+        width: 100%;
     }
 
     #output {
-        grid-column: 1 / 3;
+        grid-column: 1 / 2;
         min-height: 100px;
     }
 }
 
 @media only screen and (min-width: 501px) {
     #grid {
-        grid-template-columns: min-content min-content 1fr;
+        grid-template-columns: min-content auto;
     }
 
     #output {
         align-self: center;
-        grid-column: 3 / 4;
+        grid-column: 2 / 3;
 
     }
 }
